@@ -2,6 +2,7 @@
 -converted the SelectionList to std::vector, also removed limit of maximum
  select units while doing this.
 -eleminated the String class and replaced it with std::string
+-eleminated the FileList class and replaced it with std::vector<std::string>
 
 22-Nov-2003 by Matthias Braun
 -big reorganisation. Created several real libs in the lib directory and moved
